--- a/aura/trac_PaymentMethod/trac_PaymentMethod.cmp
+++ b/aura/trac_PaymentMethod/trac_PaymentMethod.cmp
@@ -18,103 +18,122 @@
                 <lightning:layoutItem size="12">
                     <lightning:layout>
 
-                        <lightning:layoutItem padding="around-small">
+                        <lightning:layoutItem padding="around-small" size="2">
                             <div class="header-column">
                                 <p class="field-title slds-form-element__label slds-no-flex">Payment Type</p>
                                 <p>{!v.paymentMethod.PaymentType}</p>
                             </div>
                         </lightning:layoutItem>
 
-                        <aura:if isTrue="{!equals(v.paymentMethod.PaymentType, 'REWARDS')}">
-                            <lightning:layoutItem padding="around-small">
-                                <div class="header-column">
-                                    <p class="field-title slds-form-element__label slds-no-flex">Loyalty No</p>
-                                    <p>{!v.loyaltyNo}</p>
-                                </div>
-                            </lightning:layoutItem>
-                            <lightning:layoutItem padding="around-small">
-                                <div class="header-column">
-                                    <p class="field-title slds-form-element__label slds-no-flex">Points Amount</p>
-                                    <p><lightning:formattedNumber value="{!v.paymentMethod.DisplayPointsAmount}"/></p>
-                                </div>
-                            </lightning:layoutItem>
-                            <aura:set attribute="else">
-                                <aura:if isTrue="{! not(equals(v.paymentMethod.PaymentType, 'PAYPAL'))}">
-                                    <lightning:layoutItem padding="around-small">
+                        <lightning:layoutItem size="4">
+                            <lightning:layout>
+                                <aura:if isTrue="{!equals(v.paymentMethod.PaymentType, 'REWARDS')}">
+                                    <!-- Paid with points -->
+                                    <lightning:layoutItem padding="around-small" size="6">
                                         <div class="header-column">
-                                            <p class="field-title slds-form-element__label slds-no-flex">Credit Card Name</p>
-                                            <p>{!v.paymentMethod.CreditCardName}</p>
+                                            <p class="field-title slds-form-element__label slds-no-flex">Loyalty No</p>
+                                            <p>{!v.loyaltyNo}</p>
                                         </div>
                                     </lightning:layoutItem>
-                                    <aura:if isTrue="{! not(equals(v.paymentMethod.PaymentType, 'OFF5_EMC'))}">
-                                        <lightning:layoutItem padding="around-small">
-                                            <div class="header-column">
-                                                <p class="field-title slds-form-element__label slds-no-flex">Credit Card</p>
-                                                <p>{!v.paymentMethod.CreditCardType} ending in {!v.paymentMethod.DisplayCreditCardNo}</p>
-                                            </div>
-                                        </lightning:layoutItem>
-                                        <lightning:layoutItem padding="around-small">
-                                            <div class="header-column">
-                                                <p class="field-title slds-form-element__label slds-no-flex">Credit Card Token</p>
-                                                <p>{!v.paymentMethod.CreditCardNo}</p>
-                                            </div>
-                                        </lightning:layoutItem>
-                                        <lightning:layoutItem padding="around-small">
-                                            <div class="header-column">
-                                                <p class="field-title slds-form-element__label slds-no-flex">Expiration Date</p>
-                                                <p>{!v.paymentMethod.CreditCardExpDate}</p>
-                                            </div>
-                                        </lightning:layoutItem>
-                                    </aura:if>
-                                    <aura:if isTrue="{!not(empty(v.paymentMethod.DisplaySvcNo))}">
-                                        <lightning:layoutItem padding="around-small">
-                                            <div class="header-column">
-                                                <p class="field-title slds-form-element__label slds-no-flex">Last 4 Digits of Gift Card</p>
-                                                <p>{!v.paymentMethod.DisplaySvcNo}</p>
-                                            </div>
-                                        </lightning:layoutItem>
-                                    </aura:if>
+                                    <lightning:layoutItem padding="around-small">
+                                        <div class="header-column">
+                                            <p class="field-title slds-form-element__label slds-no-flex">Points Amount</p>
+                                            <p>
+                                                <aura:if isTrue="{! empty(v.paymentMethod.PaymentReference9)}">
+                                                    -
+                                                    <aura:set attribute="else">
+                                                        <lightning:formattedNumber value="{!v.paymentMethod.PaymentReference9}"/>
+                                                    </aura:set>
+                                                </aura:if>
+                                            </p>
+                                        </div>
+                                    </lightning:layoutItem>
+                                    <aura:set attribute="else">
+                                        <!-- Not paid with points -->
+                                        <aura:if isTrue="{! not(equals(v.paymentMethod.PaymentType, 'PAYPAL'))}">
+                                            <!-- NOT PayPal -->
+                                            <aura:if isTrue="{! not(empty(v.paymentMethod.DisplaySvcNo))}">
+                                                <!-- Gift Card -->
+                                                <lightning:layoutItem padding="around-small" size="6">
+                                                    <div class="header-column">
+                                                        <p class="field-title slds-form-element__label slds-no-flex">Last 4 Digits of Gift Card</p>
+                                                        <p>{!v.paymentMethod.DisplaySvcNo}</p>
+                                                    </div>
+                                                </lightning:layoutItem>
+                                                <aura:set attribute="else">
+                                                    <!-- NOT Gift Card (Should be credit card) -->
+                                                    <lightning:layoutItem padding="around-small" size="6">
+                                                        <div class="header-column">
+                                                            <p class="field-title slds-form-element__label slds-no-flex">Credit Card Name</p>
+                                                            <p>{!v.paymentMethod.CreditCardName}</p>
+                                                        </div>
+                                                        <aura:if isTrue="{! not(equals(v.paymentMethod.PaymentType, 'OFF5_EMC'))}">
+                                                            <!-- NOT OFF5_EMC credit card -->
+                                                            <div class="header-column slds-m-top--small">
+                                                                <p class="field-title slds-form-element__label slds-no-flex">Credit Card</p>
+                                                                <p>{!v.paymentMethod.CreditCardType} ending in {!v.paymentMethod.DisplayCreditCardNo}</p>
+                                                            </div>
+                                                        </aura:if>
+                                                    </lightning:layoutItem>
+                                                    <aura:if isTrue="{! not(equals(v.paymentMethod.PaymentType, 'OFF5_EMC'))}">
+                                                        <!-- NOT OFF5_EMC credit card -->
+                                                        <lightning:layoutItem padding="around-small">
+                                                            <div class="header-column">
+                                                                <p class="field-title slds-form-element__label slds-no-flex">Credit Card Token</p>
+                                                                <p>{!v.paymentMethod.CreditCardNo}</p>
+                                                            </div>
+                                                            <div class="header-column slds-m-top--small">
+                                                                <p class="field-title slds-form-element__label slds-no-flex">Expiration Date</p>
+                                                                <p>{!v.paymentMethod.CreditCardExpDate}</p>
+                                                            </div>
+                                                        </lightning:layoutItem>
+                                                    </aura:if>
+                                                </aura:set>
+                                            </aura:if>
+                                        </aura:if>
+                                    </aura:set>
                                 </aura:if>
-                            </aura:set>
-                        </aura:if>
-
-                        <lightning:layoutItem padding="around-small">
-                            <div class="header-column">
-                                <p class="field-title slds-form-element__label slds-no-flex">Amount To Be Charged</p>
-                                <p>
-                                    <lightning:formattedNumber
-                                            value="{! empty(v.paymentMethod.RequestAmount) ? '0.00' : v.paymentMethod.RequestAmount}"
-                                            style="currency" currencyCode="USD" currencyDisplayAs="symbol"/>
-                                </p>
-                            </div>
+                            </lightning:layout>
                         </lightning:layoutItem>
 
-                        <lightning:layoutItem padding="around-small">
-                            <div class="header-column">
-                                <p class="field-title slds-form-element__label slds-no-flex">Total Authorized</p>
-                                <p>
-                                    <lightning:formattedNumber
-                                            value="{!v.paymentMethod.TotalAuthorized}" style="currency"
-                                            currencyCode="USD" currencyDisplayAs="symbol"/>
-                                </p>
-                            </div>
-                        </lightning:layoutItem>
+                        <lightning:layoutItem size="6">
+                            <lightning:layout>
+                                <lightning:layoutItem padding="around-small">
+                                    <div class="header-column">
+                                        <p class="field-title slds-form-element__label slds-no-flex">Amount To Be Charged</p>
+                                        <p>
+                                            <lightning:formattedNumber
+                                                    value="{! empty(v.paymentMethod.RequestAmount) ? '0.00' : v.paymentMethod.RequestAmount}"
+                                                    style="currency" />
+                                        </p>
+                                    </div>
+                                </lightning:layoutItem>
 
-                        <lightning:layoutItem padding="around-small">
-                            <div class="header-column">
-                                <p class="field-title slds-form-element__label slds-no-flex">Total Charged</p>
-                                <p>
-                                    <lightning:formattedNumber
-                                            value="{!v.paymentMethod.TotalCharged}" style="currency"
-                                            currencyCode="USD" currencyDisplayAs="symbol"/>
-                                </p>
-                            </div>
-                        </lightning:layoutItem>
+                                <lightning:layoutItem padding="around-small">
+                                    <div class="header-column">
+                                        <p class="field-title slds-form-element__label slds-no-flex">Total Authorized</p>
+                                        <p>
+                                            <lightning:formattedNumber
+                                                    value="{!v.paymentMethod.TotalAuthorized}" style="currency" />
+                                        </p>
+                                    </div>
+                                </lightning:layoutItem>
 
+                                <lightning:layoutItem padding="around-small">
+                                    <div class="header-column">
+                                        <p class="field-title slds-form-element__label slds-no-flex">Total Charged</p>
+                                        <p>
+                                            <lightning:formattedNumber
+                                                    value="{!v.paymentMethod.TotalCharged}" style="currency"/>
+                                        </p>
+                                    </div>
+                                </lightning:layoutItem>
+                            </lightning:layout>
+                        </lightning:layoutItem>
                     </lightning:layout>
                 </lightning:layoutItem>
 
-                <lightning:layoutItem padding="around-small">
+                <lightning:layoutItem padding="around-small" size="4">
                     <div class="header-column">
                         <p class="field-title slds-form-element__label slds-no-flex">Billing Address</p>
                         <p>{!v.paymentMethod.PersonInfoBillTo.FirstName + ' ' + v.paymentMethod.PersonInfoBillTo.LastName + ', ' + v.paymentMethod.PersonInfoBillTo.DayPhone}</p>
