--- a/aura/trac_PaymentCapture/trac_PaymentCapture.cmp
+++ b/aura/trac_PaymentCapture/trac_PaymentCapture.cmp
@@ -13,6 +13,7 @@
 
     <aura:attribute name="newPaymentMethods" type="Object[]" default="[]"/>
     <aura:attribute name="paymentRemaining" type="Decimal" default="0.00"/>
+    <aura:attribute name="showButton" type="Boolean" default="true" />
 
     <aura:registerEvent name="refreshOrderEvent" type="c:trac_RefreshOrderEvent"/>
 
@@ -22,33 +23,34 @@
 
     <aura:handler name="init" value="{!this}" action="{!c.handleInit}"/>
 
+    <aura:if isTrue="{!v.showButton}">
     <lightning:button onclick="{!c.handleOpenModal}"
                       variant="brand"
                       label="Update Payment"
                       iconName="utility:currency"
                       disabled="{!v.disabled}"/>
+    </aura:if>
 
     <aura:if isTrue="{!v.isModalOpen}">
+        <!-- Modal/Popup Box starts here-->
         <section role="dialog" tabindex="-1" aria-labelledby="modal-heading-01" aria-modal="true"
                  aria-describedby="modal-content-id-1" class="slds-modal slds-modal_medium slds-fade-in-open">
             <div class="slds-modal__container">
+                <!-- Modal/Popup Box Header Starts here-->
                 <header class="slds-modal__header">
                     <h2 id="modal-heading-01" class="slds-text-heading_medium slds-hyphenate">Update Payment</h2>
                 </header>
+                <!--Modal/Popup Box Body Starts here-->
                 <div class="slds-modal__content slds-p-around_medium sldsCustomWidth" id="modal-content-id-1">
                     <lightning:layout>
                         <lightning:layoutItem padding="around-small">
                             <div class="header-column">
-                                <p class="field-title slds-form-element__label slds-no-flex">Total Amount</p>
-                                <lightning:formattedNumber value="{!v.order.PriceInfo.TotalAmount}" style="currency"
-                                                           currencyCode="USD" currencyDisplayAs="symbol"/>
+                                <lightning:input type="number" name="amountRemaining" readonly="true" label="Total Amount" value="{!v.order.PriceInfo.TotalAmount}" formatter="currency" step="0.01"/>
                             </div>
                         </lightning:layoutItem>
                         <lightning:layoutItem padding="around-small">
                             <div class="header-column">
-                                <p class="field-title slds-form-element__label slds-no-flex">Remaining Amount To Charge</p>
-                                <lightning:formattedNumber value="{!v.paymentRemaining}" style="currency" currencyCode="USD"
-                                                           currencyDisplayAs="symbol"/>
+                                <lightning:input type="number" name="amountRemaining" readonly="true" label="Remaining Amount To Charge" value="{!v.paymentRemaining}" formatter="currency" step="0.01"/>
                             </div>
                         </lightning:layoutItem>
                         <lightning:layoutItem padding="around-small">
@@ -57,7 +59,7 @@
                     </lightning:layout>
 
                     <div class="slds-box_border slds-p-around_small slds-theme--shade">
-                        <h2 class="slds-p-around_small">New Payment Methods</h2>
+                        <h2>New Payment Methods</h2>
                         <aura:if isTrue="{!not(empty(v.newPaymentMethods))}">
                             <aura:iteration items="{!v.newPaymentMethods}" var="paymentMethod" indexVar="num">
                                 <c:trac_PaymentMethod paymentMethod="{!paymentMethod}" count="{!num}" showActions="True"/>
@@ -66,12 +68,13 @@
                     </div>
 
                     <div class="slds-box_border slds-p-around_small slds-theme--shade">
-                        <h2 class="slds-p-around_small">Existing Payment Methods</h2>
+                        <h2>Existing Payment Methods</h2>
                         <aura:iteration items="{!v.order.PaymentMethods.PaymentMethod}" var="paymentMethod" indexVar="num">
                             <c:trac_PaymentMethod paymentMethod="{!paymentMethod}" count="{!num}" showActions="False"/>
                         </aura:iteration>
                     </div>
                 </div>
+                <!--Modal/Popup Box Footer Starts here-->
                 <footer class="slds-modal__footer">
                     <lightning:button label="Apply" variant="brand"
                                       onclick="{! c.handleUpdatePaymentMethods }"/>
@@ -82,4 +85,5 @@
         </section>
         <div class="slds-backdrop slds-backdrop_open"></div>
     </aura:if>
+
 </aura:component>
