--- a/aura/trac_CancelOrder/trac_CancelOrder.cmp
+++ b/aura/trac_CancelOrder/trac_CancelOrder.cmp
@@ -2,6 +2,7 @@
  - Created by jhoran on 7/17/2019.
  -->
 <aura:component description="trac_CancelOrder" extends="c:trac_BaseComponent" controller="trac_CancelOrderCtlr">
+    <aura:attribute name="showButton" type="Boolean" default="true" />
     <aura:attribute name="order" type="Object"/>
     <aura:attribute name="orderLineItem" type="Object"/>
     <aura:attribute name="caseRecord" type="Case"/>
@@ -35,11 +36,13 @@
 
     <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>
 
+    <aura:if isTrue="{!v.showButton}">
     <lightning:button onclick="{!c.handleOpenModal}"
                       variant="brand"
                       label="Cancel"
                       iconName="utility:close"
                       disabled="{!v.disabled}"/>
+    </aura:if>
 
     <aura:if isTrue="{!v.isModalOpen}">
         <!-- Modal/Popup Box starts here-->
