--- a/aura/trac_OrderRefundCredit/trac_OrderRefundCredit.cmp
+++ b/aura/trac_OrderRefundCredit/trac_OrderRefundCredit.cmp
@@ -1,55 +1,55 @@
 <!--
  - Created by jhoran on 7/3/2019.
  -->
-
 <aura:component description="trac_OrderRefundCredit" extends="c:trac_BaseComponent" controller="trac_OrderRefundCreditCtlr">
     <aura:attribute name="order" type="Object"/>
     <aura:attribute name="orderLineItem" type="Object"/>
     <aura:attribute name="caseRecord" type="Case"/>
-
     <aura:attribute name="newOrderRefundCredit" type="Object"/>
     <aura:attribute name="simpleNewOrderRefundCredit" type="Object"/>
     <aura:attribute name="newOrderRefundCreditError" type="String"/>
-
     <aura:attribute name="isModalOpen" type="boolean" default="false"/>
+
+    <aura:attribute name="showButton" type="Boolean" default="true" />
+    <aura:method name="createORC"  action="{!c.createOrderRefundCredit}" access="public"/>
 
     <force:recordData aura:id="orderRefundCreditCreator"
                       layoutType="FULL"
                       targetRecord="{!v.newOrderRefundCredit}"
                       targetFields="{!v.simpleNewOrderRefundCredit}"
                       targetError="{!v.newOrderRefundCreditError}"/>
-
-    <lightning:layout>
-
-        <lightning:layoutItem>
-            <lightning:button onclick="{!c.createOrderRefundCredit}"
-                              variant="brand"
-                              label="Order Refund/Credit"
-                              iconName="utility:record_create"/>
-        </lightning:layoutItem>
-    </lightning:layout>
-
-
+    <aura:if isTrue="{!v.showButton}">
+        <lightning:layout>
+            <lightning:layoutItem>
+                <lightning:button onclick="{!c.createOrderRefundCredit}"
+                                  variant="brand"
+                                  label="Order Refund/Credit"
+                                  iconName="utility:record_create"/>
+            </lightning:layoutItem>
+        </lightning:layout>
+    </aura:if>
     <aura:if isTrue="{!v.isModalOpen}">
         <!-- Modal/Popup Box starts here-->
         <section role="dialog" tabindex="-1" aria-labelledby="modal-heading-01" aria-modal="true"
                  aria-describedby="modal-content-id-1" class="slds-modal slds-modal_medium slds-fade-in-open">
             <div class="slds-modal__container">
-                <!-- Modal/Popup Box Header Starts here-->
-                <header class="slds-modal__header">
-                    <h2 id="modal-heading-01" class="slds-text-heading_medium slds-hyphenate">Order Refund Credit</h2>
-                </header>
-                <!--Modal/Popup Box Body Starts here-->
-                <div class="slds-modal__content slds-p-around_medium sldsCustomWidth" id="modal-content-id-1">
-                    <lightning:flow aura:id="flow" onstatuschange="{!c.handleStatusChange}"/>
+                <div class="slds-is-relative">
+                    <!-- Modal/Popup Box Header Starts here-->
+                    <header class="slds-modal__header">
+                        <h2 id="modal-heading-01" class="slds-text-heading_medium slds-hyphenate">Order Refund Credit</h2>
+                    </header>
+                    <!--Modal/Popup Box Body Starts here-->
+                    <div class="slds-modal__content slds-p-around_medium sldsCustomWidth" id="modal-content-id-1">
+                        <lightning:flow aura:id="flow" onstatuschange="{!c.handleStatusChange}"/>
+                        <lightning:spinner variant="brand" size="large" aura:id="Id_spinner" class="slds-hide"/>
+                    </div>
+                    <!--Modal/Popup Box Footer Starts here-->
+                    <footer class="slds-modal__footer">
+                        <lightning:button label="Close" onclick="{! c.handleCloseModal }"/>
+                    </footer>
                 </div>
-                <!--Modal/Popup Box Footer Starts here-->
-                <footer class="slds-modal__footer">
-                    <lightning:button label="Close" onclick="{! c.handleCloseModal }"/>
-                </footer>
             </div>
         </section>
         <div class="slds-backdrop slds-backdrop_open"></div>
     </aura:if>
-
 </aura:component>
